Changelog
---------

v7.9.1:
 Project changes:
 SportsTracker changes:
 ExerciseViewer changes:

v7.9.0:
 Project changes:
 - updated Kotlin to version 1.6.10 (solves JDK 16/17 compatibility issues)
 - updated to JavaFX / OpenJFX 17
 - ensured JDK 17 compatibility
 - created a GitHub Actions based CI (continuous integration) pipeline for
   build and test execution (replaces the stalled Travis CI build)
 - updated ControlsFX to version 11.1.1
 SportsTracker changes:
 - SQLite Exporter: datetime of exercises, notes and weight entries is now a
   string in ISO 8601 format "yyyy-MM-dd HH:mm:ss" instead of seconds since
   1.1.1970 (makes database processing easier and content more readable)
 - Exercise Dialog: fixed CSS warning on dialog display
   (caused by a ControlsFX validation bug)
 ExerciseViewer changes:
 - Garmin FIT parser: provides heartrate zones information and times within
   these zones (if available)
   - newer Garmin devices (e.g. Garmin Forerunner 645, Garmin Fenix 5,
     Garmin Edge 530 and later) provide all the data
   - older Garmin devices (e.g. Garmin Forerunner 520 or 820, Suunto Spartan)
     provide only the time in the heartrate zones, not the zone boundaries
  - Diagram and Track Panel: bugfix for issue #243
    (exercise files with completely flat altitude can't be displayed)
 - support for parsing and displaying power data:
   - Garmin FIT parser: provides power data on exercise, lap and sample level
     (average, maximum and normalized power for the exercise and each lap)
   - Optional Panel: displays power data summary for the exercise
   - Lap Panel: displays power data summary for each lap
   - Sample Panel: displays power data for each recorded sample
   - Diagram Panel: displays power data on each axis
   - Track Panel: displays power data for the current position (tooltip)
 - Main Panel: sport type is displayed, if available (e.g. for Garmin FIT,
   Polar and Timex files)

v7.8.0:
 SportsTracker changes: