@@ -1,12 +1,6 @@
 SportsTracker-TODO
 ==================
 
-CSS issue:
-- Labels for section headers are not shown in bold anymore, although the font-weight is set in CSS
-- Problem: the default font family does not support bold fonts anymore
-- Solution: use another font-family, "Arial" works on macOS (on other systems as well?)
-  - See ImageViewer for bugfix implementation
-
 ExerciseViewer standalone mode:
 - add support for viewing just a single HRM file by using the "Open with"
   option of the operating system
@@ -64,7 +58,7 @@ JavaFX Migration:
   - although this bug is closed, it still exists in JDK 10
   - temporary workaround in FxWorkarounds.fixDatePickerTextEntry() => remove when fixed in JavaFX
 
-Mac OS X integration:
+macOS integration:
 - Application name is not displayed in the MenuBar, it shows STMain instead
   => Workaround: pass JVM parameter "-Xdock:name=SportsTracker" on startup
   => JDK 9/10 will provide a new API for macOS specific dock and menu integration
@@ -74,7 +68,9 @@ Mac OS X integration:
   (see http://openjdk.java.net/jeps/272)
   - currently for Swing apps only
   - JavaFX support might be added after Java 10: https://bugs.openjdk.java.net/browse/JDK-8091107
-
+- macOS font issue: default system font does not support bold fonts (needed for section header labels)
+  - Workaround: use font-family Arial for bold fonts in CSS files
+  - OpenJDK bug: https://bugs.openjdk.java.net/browse/JDK-8222624
 
 General TODOs:
 --------------
