@@ -1,14 +1,14 @@
 #####################################################################
 # SportsTracker resources for english language (default)
 #
-# Version: SportsTracker 7.9.0
-# Last update: 2021/12/30
+# Version: SportsTracker 7.9.1
+# Last update: 2022/02/12
 #
-# (C) 2020, Stefan Saring
+# (C) 2022, Stefan Saring
 #####################################################################
 
 application.title=SportsTracker
-application.version=7.9.0
+application.version=7.9.1
 
 # common resources
 common.n_a_=n.a.
